2008-11-08  Esteban Sanchez  <estebans@artica.es>

	* godmode/reporting/reporting_builder.php: Fixed value of 1 week
	period.

	* include/functions.php: Moved all human_time_* functionallity to
	human_time_description_raw().

	* include/functions_reporting.php: Fixed a bug in SLA calculation that
	affects small periods of time (less than 24 hours) due to data
	compression in the database.

	* operation/reporting/reporting_viewer.php: Style correction.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Style corrections ins give_acl(). Show
	nothing on sql_error_handler based on error_reporting() level.

	* ChangeLog: Fixed my previous commit date.

2008-11-06  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* operation/snmpconsole/snmp_View.php: Added a span with title over the
	time comp since some people want to know what time something went down.
	This should maybe be moved into a print_ function

	* operation/agentes/estado_generalagente.php: ACL check and style
	changes. Use of new functions

	* include/functions_db.php: dame_numero_datos - added inc and string
	can also filter on agent now. Renamed give_agent_address_from_list to
	get_agent_addresses. get_agent_addresses now returns an array with ips
	Changed give_agent_address to get_agent_address

	* godmode/agentes/manage_config.php,
	godmode/agentes/configurar_agente.php: Renamed functions


2008-11-05  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Added sql_error_handler() to show SQL
	errors. Improved SQL error messages in process_sql() so it shows now
	the failing sentence, the file and the line of the call.

	* index.php: Moved load_extensions() call after enterprise
	instalation so enterprise extensions are installed properly.

	* godmode/profiles/profile_list.php: HTML tags nesting fixed.

	* ChangeLog: Fixed previous commit message style.

2008-11-05  Ramon Novoa  <rnovoa@artica.es>
